--- a/static/stat572/hw/Hwk4_Solution.Rmd
+++ b/static/stat572/hw/Hwk4_Solution.Rmd
@@ -95,7 +95,7 @@ Notice that
 such that rearranging terms we have
 \begin{eqnarray*}
 p(\tilde{y} | y_{1:n}) &=& \frac{\Gamma(\tilde{y} + a_n)}{\Gamma(a_n)\tilde{y}!} \frac{b_n^{a_n}}{(1+b_n)^{\tilde{y} + a_n}} \boldsymbol{1}_{\{\tilde{y}\in\mathbb{R}_0\}}\\
-&=& \frac{{\tilde{y} + a_n-1 \choose \tilde{y}}  y! \;\Gamma(a_n)}{\Gamma(a_n)\tilde{y}!} \frac{b_n^{a_n}}{(1+b_n)^{\tilde{y} + a_n}} \boldsymbol{1}_{\{\tilde{y}\in\mathbb{R}_0\}}\\
+&=& \frac{\tilde{y} + a_n-1 \choose \tilde{y}  y! \;\Gamma(a_n)}{\Gamma(a_n)\tilde{y}!} \frac{b_n^{a_n}}{(1+b_n)^{\tilde{y} + a_n}} \boldsymbol{1}_{\{\tilde{y}\in\mathbb{R}_0\}}\\
 &=& {\tilde{y} + a_n-1 \choose \tilde{y}} \left(\frac{b_n}{1+b_n}\right)^{a_n}  \left(\frac{1}{1+b_n}\right)^{\tilde{y}} \boldsymbol{1}_{\{\tilde{y}\in\mathbb{R}_0\}}\\
 &=& {\tilde{y} + a_n-1 \choose \tilde{y}} \left(1-\frac{1}{1+b_n}\right)^{a_n}  \left(\frac{1}{1+b_n}\right)^{\tilde{y}} \boldsymbol{1}_{\{\tilde{y}\in\mathbb{R}_0\}},
 \end{eqnarray*}
