fix linear algebra.tex

--- a/static/stat671/sheet/linearalgebra.tex
+++ b/static/stat671/sheet/linearalgebra.tex
@@ -55,8 +55,8 @@ header-includes:
 \makeatother
 
 % Define BibTeX command
-\def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
-    T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
+\def\BibTeX{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
+    T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}
 
 % Don't print section numbers
 \setcounter{secnumdepth}{0}
